@@ -5,8 +5,24 @@ import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.NoSuchElementException;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static junit.homework.asserting.StringUtils.removeVowels;
+import static junit.homework.asserting.StringUtils.reverseString;
+import static junit.homework.asserting.StringUtils.splitAndRemoveEmptyStrings;
+import static org.junit.jupiter.api.Assertions.assertArrayEquals;
+import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertIterableEquals;
+import static org.junit.jupiter.api.Assertions.assertLinesMatch;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertSame;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.fail;
 
 class StringUtilsTest {
 
@@ -14,49 +30,50 @@ class StringUtilsTest {
     @DisplayName("reverseString() should return the reverse of the given string")
     void testReverseString() {
         // TODO: Write an assertEquals assertion
-        assertEquals("cba", StringUtils.reverseString("abc"));
+        assertEquals("cba", reverseString("abc"));
     }
 
     @Test
     @DisplayName("reverseString() should return an empty string for an empty string")
     void testReverseStringEmptyString() {
         // TODO: Write an assertEquals assertion
-        assertEquals("", StringUtils.reverseString(""));
+        assertEquals("", reverseString(""));
     }
 
     @Test
     @DisplayName("reverseString() should return null for a null string")
     void testReverseStringNullString() {
         // TODO: Write an assertNull assertion
-        assertNull(StringUtils.reverseString(null));
+        assertNull(reverseString(null));
     }
 
     @Test
     @DisplayName("reverseString() should not return the original string for non-empty and non-null input")
     void testReverseStringNotOriginal() {
+        assertFalse(!"sca".equals(reverseString("acs")));
         // TODO: Write an assertFalse assertion
-        assertFalse("hello".equals(StringUtils.reverseString("hello")));
+        assertFalse("hello".equals(reverseString("hello")));
     }
 
     @Test
     @DisplayName("removeVowels() should remove all vowels from the given string")
     void testRemoveVowels() {
         // TODO: Write an assertNotEquals assertion
-        assertNotEquals("anyText", StringUtils.removeVowels("anyText"));
+        assertNotEquals("anyText", removeVowels("anyText"));
     }
 
     @Test
     @DisplayName("removeVowels() should return an empty string for a string containing only vowels")
     void testRemoveVowelsAllVowels() {
         // TODO: Write an assertEquals assertion
-        assertEquals("", StringUtils.removeVowels("aeiou"));
+        assertEquals("", removeVowels("aeiou"));
     }
 
     @Test
     @DisplayName("removeVowels() should return the same string for a string without vowels")
     void testRemoveVowelsNoVowels() {
         // TODO: Write an assertSame assertion
-        assertSame("bcdfg", StringUtils.removeVowels("bcdfg"));
+        assertSame("bcdfg", removeVowels("bcdfg"));
     }
 
     @Test
@@ -64,43 +81,45 @@ class StringUtilsTest {
     void testSplitAndRemoveEmptyStrings() {
         List<String> expected = Arrays.asList("apple", "banana", "cherry");
         // TODO: Write an assertIterableEquals assertion
-        assertIterableEquals(expected, StringUtils.splitAndRemoveEmptyStrings("apple,banana,,cherry"));
+        assertIterableEquals(expected, splitAndRemoveEmptyStrings("apple,banana,cherry"));
+        assertIterableEquals(expected, splitAndRemoveEmptyStrings("apple,banana,,,,cherry"));
     }
 
     @Test
     @DisplayName("splitAndRemoveEmptyStrings() should return an empty list for an empty string")
     void testSplitAndRemoveEmptyStringsEmptyString() {
         // TODO: Write an assertTrue assertion
-        assertTrue(StringUtils.splitAndRemoveEmptyStrings("").isEmpty());
+        assertTrue(splitAndRemoveEmptyStrings("").isEmpty());
     }
 
     @Test
     @DisplayName("splitAndRemoveEmptyStrings() should return an empty list for a null string")
     void testSplitAndRemoveEmptyStringsNullString() {
         // TODO: Write an assertNotNull assertion
-        assertNotNull(StringUtils.splitAndRemoveEmptyStrings(null));
+        assertNotNull(splitAndRemoveEmptyStrings(null));
     }
 
     @Test
     @DisplayName("splitAndRemoveEmptyStrings() should return the same list for a string without commas")
     void testSplitAndRemoveEmptyStringsNoCommas() {
-        List<String> expected = Arrays.asList("hello");
+        List<String> expected = List.of("hello");
         // TODO: Write an assertArrayEquals assertion
-        assertArrayEquals(expected.toArray(), StringUtils.splitAndRemoveEmptyStrings("hello").toArray());
+        assertArrayEquals(expected.toArray(), splitAndRemoveEmptyStrings("hello").toArray());
     }
 
     @Test
     @DisplayName("splitAndRemoveEmptyStrings() should throw an exception for a null string")
     void testSplitAndRemoveEmptyStringsNullStringException() {
         // TODO: Write an assertThrows assertion
-        assertThrows(NullPointerException.class, () -> StringUtils.splitAndRemoveEmptyStrings(null).getFirst());
+        assertThrows(NoSuchElementException.class, () -> splitAndRemoveEmptyStrings(null).getFirst());
+        assertThrows(IndexOutOfBoundsException.class, () -> splitAndRemoveEmptyStrings(null).get(10));
     }
 
     @Test
     @DisplayName("splitAndRemoveEmptyStrings() should not throw an exception for an empty string")
     void testSplitAndRemoveEmptyStringsEmptyStringNoException() {
         // TODO: Write an assertDoesNotThrow assertion
-        assertDoesNotThrow(() -> StringUtils.splitAndRemoveEmptyStrings(""));
+        assertDoesNotThrow(() -> splitAndRemoveEmptyStrings(""));
     }
 
     @Test
@@ -115,6 +134,6 @@ class StringUtilsTest {
     void testSplitAndRemoveEmptyStringsMultipleCommas() {
         List<String> expected = Arrays.asList("apple", "banana", "cherry", "date");
         // TODO: Write an assertLinesMatch assertion
-        assertLinesMatch(expected, StringUtils.splitAndRemoveEmptyStrings("apple,,banana,cherry,date"));
+        assertLinesMatch(expected, splitAndRemoveEmptyStrings("apple,,banana,cherry,date"));
     }
 }
